--- a/contacts.html
+++ b/contacts.html
@@ -174,7 +174,7 @@ a{
 		<h1><span1>A</span1>NEESHA <span1>T</span1>OMY</h1>
 	
 	<div class="link">
-		<a href="home.html"> HOME </a><a href="services.html"> SERVICES </a><a href="projects.html">PROJECTS
+		<a href="index.html"> HOME </a><a href="services.html"> SERVICES </a><a href="projects.html">PROJECTS
 			
 		</a><a href="about.html"> ABOUT </a><a href="contacts.html"> CONTACTS </a>
 	</div>
