--- a/contacts.html
+++ b/contacts.html
@@ -201,7 +201,7 @@ a{
 	</div>
 	<div class="ser2">
 		<div class="l1">
-			<img src="img\em.png" width="80" height="50">
+			<img src="img\em.png" width="50" height="50">
 		</div>
 		<h3>EMAIL&nbsp;&nbsp;</h3><br>
 		<div class="des">
@@ -212,7 +212,7 @@ a{
 	</div>
 	<div class="ser3">
 		<div class="l1">
-			<img src="img\ad.png" width="80" height="50">
+			<img src="img\\ad.png" width="50" height="50">
 		</div>
 		<h3>ADDRESS&nbsp;&nbsp;</h3><br>
 		<div class="des">
